--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   get_it: ^8.0.0
+  go_router: ^14.3.0
   http: ^1.2.2
-  cupertino_icons: ^1.0.8
+  shared_preferences: ^2.3.2
 
 
   # The following adds the Cupertino Icons font to your application.
